# mini-ops

./: .env.example  .gitignore  CONTRIBUTING.md  CONTRIBUTING.ru.md  Cargo.toml  LICENSE  README.md  README.ru.md
docs/: CLOUD_PUSH.md  DEPLOY.md  DEPLOY.ru.md  DISK_MANAGEMENT.md  DISK_MANAGEMENT.ru.md  DOCKER_LOGS.md  DOCKER_LOGS.ru.md  MONITORING.md  MONITORING.ru.md  README.md  SECURITY.md  SECURITY.ru.md  SSH_ALERTS.md  SSH_ALERTS.ru.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  i18n.ts  index.css  types.ts
frontend/src/components/: ContainerList.tsx  Dashboard.tsx  DiskManager.tsx  HistoryLog.tsx  Layout.tsx  LogViewer.tsx  Login.tsx  SecurityCard.tsx  StatsCard.tsx  StatsChart.tsx  UpdateDialog.tsx
frontend/src/locales/: en.json  ru.json
frontend/src/pages/: Security.tsx  SshManagement.tsx
scripts/: bootstrap_server.sh  deploy.sh  mini-ops.service  provision.sh  setup_ssh_alerts.sh  ssh-alert.sh  update.sh
src/: auth.rs  cloud_payload.rs  cloud_push.rs  deployment.rs  disk_ops.rs  docker.rs  history.rs  i18n.rs  main.rs  metrics.rs  notifications.rs  security.rs  ssh_alerts.rs
