[package]
name = "mini-ops"
version = "1.1.0"
edition = "2024"
authors = ["Mini-Ops Contributors"]
description = "A lightweight self-hosted ops panel for VPS management, written in Rust."
license = "MIT"
repository = "https://github.com/rg-onion/mini-ops"
readme = "README.md"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
bollard = "0.20.0"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
mime_guess = "2.0.5"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json"] }
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
sysinfo = "0.38.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
hostname = "0.4"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
